# learning_wgpu

./: Cargo.toml  README.md
resources/: shader.wgsl
src/: main.rs
src/graphics/: camera.rs  gui.rs  mod.rs  renderable.rs  shader.rs  shapes.rs  state.rs  texture.rs  vertex.rs
