[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27.0"
wgpu = "0.17.1"
imgui = { version = "0.11.0", features = [ "docking" ] }
imgui-winit-support = "0.11.0"
imgui-wgpu = "0.24.0"
pollster = "0.3.0"
log = "0.4.20"
env_logger = "0.10.0"
cgmath = "0.18.0"
image = "0.24.7"
memoffset = "0.9.0"
tobj = "4.0.0"
num = "0.4.1"
rand = "0.8.5"
bytemuck = { version = "1.12.0", features = [ "derive" ] }